--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,7 @@
     <hr>
     <h3>Skills</h3>
 
-    <table cellspacing = "10">
+    <table cellspacing = "1 0">
     <tr>
         <td>
             <table>
