--- a/Capstone Project/index.html
+++ b/Capstone Project/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1> Saurabh Pande</h1><br>
-    <img src="../Saurabh Profile Photos.jpg" alt="Profile photo" height="100"/> 
-        
+    <img src="https://avatars.githubusercontent.com/u/100193055?v=4" alt="Profile photo" height="100"/> 
+
     <h3> Summary </h3> 
     <p>As a fun-loving and enthusiastic individual from the city of oranges, Nagpur, Maharashtra, India, I am a keen learner who is always ready to acquire new knowledge to enhance my skills. I strive to contribute my abilities to my organization and be a valuable asset to its success.</p>   
     <hr>
@@ -117,3 +117,5 @@
     </footer>
 </body>
 </html>
+
+// https://invincible06.github.io/html-portfolio/contact.html
