Third day of learning

--- a/Capstone Project/hobbies.html
+++ b/Capstone Project/hobbies.html
@@ -12,9 +12,9 @@
   <ol>
     <li> Kite flying </li>
     <li> Read or watching criminal novels or show </li>
-    <li> Listening to engliush poscasts of International Geo-politics </li>
+    <li> Listening to english podcast's of International Geo-politics </li>
     <li> Playing Video Games </li>
-    <li> Learning stock market thesis and analysis. </li>
+    <li> Learning stock market theasis and analysis. </li>
   </ol>
   <hr />
 
