--- a/6.4+Motivation+Meme+Project/6.4 Motivation Meme Project/index.html
+++ b/6.4+Motivation+Meme+Project/6.4 Motivation Meme Project/index.html
@@ -14,3 +14,20 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Motivation Meme Project</title>
+</head>
+<link rel="stylesheet" href="./style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville&display=swap" rel="stylesheet">
+<body >
+  <img src="./assets/images/14.jpg" alt="Own house">
+  <h1>house</h1>
+  <p>It takes hands to build a house, But only hearts can build a home.</p>  
+</body>
+</html>
